# ExactDiagonalization

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .lvimrc  Basis.hpp  BasisZ2.hpp  CMakeLists.txt  EDTFI.cpp  LICENSE  Makefile  README.md  TIBasis.hpp  TIBasisLadder.hpp  TIBasisZ2.hpp  TIJ1J2.hpp  TITFIsing.hpp  TIXXZ.hpp  TestLadder.cpp  _config.yml
.github/workflows/: format.yml  tests.yml
Examples/: EDTFI.cpp
Include/: NodeMV.hpp  ParallelMV.hpp
Include/Basis/: Basis.hpp  Basis2D.hpp  BasisJz.hpp  FullBasis.hpp  TIBasis.hpp  TIBasis2D.hpp  TIBasis2DZ2.hpp  TIBasisJz.hpp  TIBasisLadder.hpp  TIBasisZ2.hpp  TIKagome2D.hpp  ToOriginalBasis.hpp
Include/EDP/: .LocalHamiltonian.hpp.swp  ConstructSparseMat.hpp  LocalHamiltonian.hpp
Include/Hamiltonians/: TIJ1J2_2D.hpp  TITFI2D.hpp  TITFIsing.hpp  TIXXXJ1J2.hpp  TIXXZ.hpp
Tests/: TestBasis.cpp  TestBasis2D.cpp  TestBasisGS.cpp  TestLadder.cpp  TestLocalHam.cpp  XXZ.hpp  testBasis.cpp
debug/: CMakeCache.txt  Makefile  TestLadder  cmake_install.cmake
docs/: Gemfile  _config.yml  index.md
docs/_layouts/: default.html
examples/: tfi.cpp  tfi_arpack.cpp
include/: CMakeLists.txt  edlib.hpp
include/edlib/: edlib.hpp
include/edlib/Basis/: AbstractBasis.hpp  AbstractBasis1D.hpp  AbstractBasis2D.hpp  Basis1D.hpp  Basis1DZ2.hpp  Basis2D.hpp  Basis2DZ2.hpp  BasisFull.hpp  BasisFullU1.hpp  BasisFullZ2.hpp  BasisJz.hpp  BasisZ2.hpp  FullBasis.hpp  TIBasis2DZ2.hpp  ToOriginalBasis.hpp  TransformBasis.hpp
include/edlib/EDP/: ConstructSparseMat.hpp  LocalHamiltonian.hpp
include/edlib/Hamiltonians/: TIJ1J2_2D.hpp  TITFI2D.hpp  TITFIsing.hpp  TIXXXJ1J2.hpp  TIXXZ.hpp  dynamic_bitset.hpp
include/edlib/Op/: NodeMV.hpp  NodeMV_Defualt.hpp  NodeMV_MKL.hpp  ParallelMV.hpp  exceptions.hpp
include/edlib/Solver/: ArpackSolver.hpp
m/: TILadderYang.hpp
tests/: .clang-tidy  CMakeLists.txt  TestTIBasisZ2.cpp  XXZ.cpp  XXZ.hpp  compile_time_tests.cpp  print_vector.hpp  test_arpack_solver.cpp  test_basis1d.cpp  test_basis2d.cpp  test_basisfull.cpp  test_basisjz.cpp  test_local_ham.cpp  test_op.cpp  test_perf_basis1dz2.cpp  test_perf_basis2d.cpp  test_perf_basis2dz2.cpp  test_transform_basis.cpp  test_xxz_gs.cpp  utils.cpp  utils.hpp
